--- a/public/index.html
+++ b/public/index.html
@@ -9,23 +9,15 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
- 
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon-32x32.png" /> 
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />    
     <!-- Bootstrap cdn -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
- 
-    <title>React App</title>
+     <title>Crypto App</title>
   </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    
-
-
+  <body>    
+    <div id="root"></div> 
     <!-- Bootstrap Script -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-  
-  </body>
+    </body>
 </html>
